[package]
name = "ant-design-rs"
version = "0.1.0"
edition = "2021"
description = "ant design in rust"
license = "MIT"
authors = ["Sukyv <zsl99a@live.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }

serde = { version = "1", features = ["derive"] }
yew = { version = "0", features = ["csr"] }
stylist = { version = "0", features = ["yew_integration", "yew_use_media_query", "yew_use_style"] }
palette = { version = "0", features = ["rand", "serializing"] }
implicit-clone = { version = "0" }

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
